--- a/Exercícios/ex023/tabela001.html
+++ b/Exercícios/ex023/tabela001.html
@@ -7,22 +7,23 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
-            
+        }
+        h1 {
+            text-align: center;
         }
         table {
-            width: 250px;
+            width: 400px;
+            height: 400px;
             border-collapse: collapse; /*Faz com que as células fiquem juntas*/
-        
-        }
-        tr.linha{
-            background-color: tomato;
         }
         td {
             border: 2px solid black; 
             padding: 7px;
+            text-align: center; /*Alinhamento horizontal*/
+            vertical-align: middle;/*Alinhamento vertical top(topo), botton(baixo), middle(centro)*/
         }
-        td.dado{
-            background-color: blueviolet;
+        .numero {
+            text-align: right;
         }
     </style>
 </head>
@@ -41,34 +42,21 @@
             <td>A1</td>
             <td>B1</td>
             <td>C1</td>
-            <td>D1</td>
-            <td>E1</td>
-            <td>F1</td>
         </tr>
-        <tr class="linha"><!-- Segunda Linha -->
+        <tr><!-- Segunda Linha -->
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
-            <td>D2</td>
-            <td>E2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr> <!-- Terceira Linha -->
             <td>A3</td>
             <td>B3</td>
             <td>C3</td>
-            <td>D3</td>
         </tr>
         <tr> <!-- Quarta Linha -->
             <td>A4</td>
-            <td>B4</td>
-            <td class="dado">C4</td>
-        </tr>
-        <tr>
-            <td>A5</td>
-            <td>B5</td>
-        </tr>
-        <tr>
-            <td>A6</td>
+            <td class="numero">B4</td>
+            <td>C4</td>
         </tr>
     </table>
 </body>
