--- a/Exercícios/ex023/tabela002.html
+++ b/Exercícios/ex023/tabela002.html
@@ -21,6 +21,9 @@
             background-color: gray;
             color: white;
         }
+        td.num{
+            text-align: right;
+        }
     </style>
 </head>
 <body>
@@ -45,25 +48,45 @@
         <tbody>
             <tr>
                 <td>São Paulo</td>
-                <td>46.081.801</td>
+                <td class="num">46.081.801</td>
             </tr>
             <tr>
                 <td>Minas Gerais</td>
-                <td>21.393.441</td>
+                <td class="num">21.393.441</td>
             </tr>
             <tr>
                 <td>Rio de Janeiro</td>
-                <td>17.223.547</td>
+                <td class="num">17.223.547</td>
             </tr>
             <tr>
                 <td>Bahia</td>
-                <td>14.870.907</td>
+                <td class="num">14.870.907</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">11.233.263</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">9.562.007</td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="num">9.268.836</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="num">8.711.196</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num">8.187.029</td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
                 <th>Total de Habitantes</th>
-                <td>000</td>
+                <td class="num"><strong>158.422.544</strong></td>
             </tr>
         </tfoot>
     </table>
