--- a/Exercícios/ex023/tabela002.html
+++ b/Exercícios/ex023/tabela002.html
@@ -9,13 +9,30 @@
             font-family: Arial, Helvetica, sans-serif;
         }
         table {
-            width: 400px;
+            width: 500px;
             border-collapse: collapse;
+            position: relative;
+        }
+        caption {
+            font-size: 1.5em;
+            font-weight: bolder;
+            padding: 10px;
+            background-color: lightgray;
+        }
+        tbody > tr:nth-child(even) { /* PAR / 2N */
+            background-color: lightgray;
+        }
+        tbody > tr:nth-child(odd) { /* IMPAR / 2N-1 */
+            background-color: white;
+        }
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
         }
         td, th {
             padding: 10px;
             border: 1px solid black;
-            text-align: center;
         }
         thead, tfoot {
             background-color: gray;
@@ -31,6 +48,7 @@
     <!-- 
         Anatomia para tabelas grandes
         TABLE
+            CAPTION
             THEAD
                 TR, TD, TH
             TBODY
@@ -39,10 +57,12 @@
                 TR, TD, TH
     -->
     <table>
+        <caption>População das Unidades 
+        Federativa</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th class="col">Estado</th>
+                <th class="col" style="width: 100px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -85,10 +105,21 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>158.422.544</strong></td>
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi laboriosam labore enim voluptates odio distinctio, dicta ea, qui veniam officia possimus culpa in recusandae nemo natus, tempore vitae quibusdam itaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, tempora totam omnis eos molestias doloremque, minus recusandae velit assumenda, corporis vero consequuntur perspiciatis qui repellat cupiditate et cum id unde. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus repudiandae tenetur modi itaque aliquid fuga sunt accusantium quis voluptatibus qui incidunt non commodi libero delectus. Laborum incidunt nobis quaerat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias impedit repellat assumenda laboriosam amet aspernatur dolor tempora tempore alias, perspiciatis nemo quia beatae quisquam dolorem veniam laudantium et, quaerat accusantium.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi laboriosam labore enim voluptates odio distinctio, dicta ea, qui veniam officia possimus culpa in recusandae nemo natus, tempore vitae quibusdam itaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, tempora totam omnis eos molestias doloremque, minus recusandae velit assumenda, corporis vero consequuntur perspiciatis qui repellat cupiditate et cum id unde. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus repudiandae tenetur modi itaque aliquid fuga sunt accusantium quis voluptatibus qui incidunt non commodi libero delectus. Laborum incidunt nobis quaerat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias impedit repellat assumenda laboriosam amet aspernatur dolor tempora tempore alias, perspiciatis nemo quia beatae quisquam dolorem veniam laudantium et, quaerat accusantium.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi laboriosam labore enim voluptates odio distinctio, dicta ea, qui veniam officia possimus culpa in recusandae nemo natus, tempore vitae quibusdam itaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, tempora totam omnis eos molestias doloremque, minus recusandae velit assumenda, corporis vero consequuntur perspiciatis qui repellat cupiditate et cum id unde. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus repudiandae tenetur modi itaque aliquid fuga sunt accusantium quis voluptatibus qui incidunt non commodi libero delectus. Laborum incidunt nobis quaerat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias impedit repellat assumenda laboriosam amet aspernatur dolor tempora tempore alias, perspiciatis nemo quia beatae quisquam dolorem veniam laudantium et, quaerat accusantium.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi laboriosam labore enim voluptates odio distinctio, dicta ea, qui veniam officia possimus culpa in recusandae nemo natus, tempore vitae quibusdam itaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, tempora totam omnis eos molestias doloremque, minus recusandae velit assumenda, corporis vero consequuntur perspiciatis qui repellat cupiditate et cum id unde. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus repudiandae tenetur modi itaque aliquid fuga sunt accusantium quis voluptatibus qui incidunt non commodi libero delectus. Laborum incidunt nobis quaerat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias impedit repellat assumenda laboriosam amet aspernatur dolor tempora tempore alias, perspiciatis nemo quia beatae quisquam dolorem veniam laudantium et, quaerat accusantium.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi laboriosam labore enim voluptates odio distinctio, dicta ea, qui veniam officia possimus culpa in recusandae nemo natus, tempore vitae quibusdam itaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, tempora totam omnis eos molestias doloremque, minus recusandae velit assumenda, corporis vero consequuntur perspiciatis qui repellat cupiditate et cum id unde. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus repudiandae tenetur modi itaque aliquid fuga sunt accusantium quis voluptatibus qui incidunt non commodi libero delectus. Laborum incidunt nobis quaerat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias impedit repellat assumenda laboriosam amet aspernatur dolor tempora tempore alias, perspiciatis nemo quia beatae quisquam dolorem veniam laudantium et, quaerat accusantium.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi laboriosam labore enim voluptates odio distinctio, dicta ea, qui veniam officia possimus culpa in recusandae nemo natus, tempore vitae quibusdam itaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, tempora totam omnis eos molestias doloremque, minus recusandae velit assumenda, corporis vero consequuntur perspiciatis qui repellat cupiditate et cum id unde. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus repudiandae tenetur modi itaque aliquid fuga sunt accusantium quis voluptatibus qui incidunt non commodi libero delectus. Laborum incidunt nobis quaerat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias impedit repellat assumenda laboriosam amet aspernatur dolor tempora tempore alias, perspiciatis nemo quia beatae quisquam dolorem veniam laudantium et, quaerat accusantium.</p>
 </body>
 </html>
