--- a/Exercícios/ex023/tabela002.html
+++ b/Exercícios/ex023/tabela002.html
@@ -46,7 +46,7 @@
 <body>
     <h1>Uso de tabelas Grandes</h1>
     <!-- 
-        Anatomia para tabelas grandes
+        Anatomia para tabelas "grandes"
         TABLE
             CAPTION
             THEAD
