--- a/Desafios/desafio_13/tabela002.html
+++ b/Desafios/desafio_13/tabela002.html
@@ -18,10 +18,10 @@
             text-align: center;
             border-radius: 3px;
             box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.445);
-            background-color: rgba(52, 233, 52, 0.582);
+            background-color: rgb(241, 241, 167);
         }
         td:hover {
-            background-color: green;
+            background-color: yellow;
         }
     </style>
 </head>
@@ -60,5 +60,6 @@
             
         </tr>
     </table>
+    <p><strong>Escolha uma letra!</strong></p>
 </body>
 </html>
