--- a/Exercícios/ex024/iframe002.html
+++ b/Exercícios/ex024/iframe002.html
@@ -22,7 +22,11 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque mollitia sed corporis dicta id illum dolorem tempora eaque ipsum! Dignissimos laboriosam consequatur aliquid provident quis consectetur aliquam ducimus exercitationem laborum.
     </p>
-    <iframe src="pag001.html" frameborder="0"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0">
+        <p>
+            Infelizmente seu navegador não é compatível para  mostrar a tabela.
+        </p>
+    </iframe>
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad quia quos necessitatibus officiis a vel, ipsum tenetur! Minima assumenda adipisci in, expedita, quo doloribus consectetur quod quos dolor optio fugit?
     </p>
