--- a/Exercícios/ex025/form001.html
+++ b/Exercícios/ex025/form001.html
@@ -14,10 +14,19 @@
     <h1>
         Meu primeiro formulário
     </h1>
-    <form>
-        <p>Nome: <input type="text" name="nome" id="nome"></p>
-        <p>Sobrenome: <input type="text" name="nome" id="nome"></p>
-        <p><input type="submit" value="Enviar"></p>
+    <form  action="cadastro.php" autocomplete="off">
+        <p><label for="inome">Nome: </label>
+             <input type="text" name="nome" id="inome">
+        </p>
+        <p><label for="isobrenome">Sobrenome:</label> 
+            <input type="text" name="sobrenome" id="isobrenome">
+        </p>
+        <p>
+            <input type="submit" value="Enviar">
+        </p>
+        <!-- 
+            Dessa fora o usuário só precisa clicar onde está escrito nome ou sobrenome para que possa preencher o formulário 
+        -->
     </form>
 </body>
 </html>
